Ajout modele DataSource Couches Apprenant

--- a/permis-piste/src/main/resources/datasource.properties
+++ b/permis-piste/src/main/resources/datasource.properties
@@ -6,6 +6,6 @@
 # password=
 
 # HukariCP configuration
-# dataSource.url=jdbc:h2:mem:resthub
-# dataSource.user=sa
-# dataSource.password=
+ dataSource.url=jdbc:mysql://localhost:3306/permispiste
+ dataSource.user=userepul
+ dataSource.password=epul
