configuration connexion bdd suppression partie client

--- a/permis-piste/src/main/resources/datasource.properties
+++ b/permis-piste/src/main/resources/datasource.properties
@@ -1,11 +1,12 @@
 # datasource properties
 
 # BoneCP configuration
-# jdbcUrl=jdbc:h2:mem:resthub;DB_CLOSE_DELAY=-1;MVCC=TRUE
-# username=sa
-# password=
-
+jdbcUrl=jdbc:mysql://localhost:3306/permispiste
+username=userepul
+password=epul
+driverClass=com.mysql.jdbc.Driver
 # HukariCP configuration
- dataSource.url=jdbc:mysql://localhost:3306/permispiste
- dataSource.user=userepul
- dataSource.password=epul
+# dataSource.url=jdbc:mysql://localhost:3306/permispiste
+# dataSource.user=userepul
+# dataSource.password=epul
+# dataSourceClassName=com.mysql.jdbc.Driver
